--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_rospack
-	base = 68dbaff
-	trimbase = 
+	base = abad755
+	trimbase = 68dbaff
 	parent = upstream
 	previous = 03313c3
