--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_nav_msgs
-	base = 87acbcd
-	trimbase = 
+	base = a01279c
+	trimbase = 87acbcd
 	parent = upstream
 	previous = 03313c3
