--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_nav_msgs
 	base = 2a7192c
-	trimbase = cb7eb6f
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
