--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_rosnode
-	base = 9fc63e9
-	trimbase = 
+	base = 93597fa
+	trimbase = 9fc63e9
 	parent = upstream
 	previous = 03313c3
