--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_tf
-	base = ed12c80
-	trimbase = 
+	base = 3a83cde
+	trimbase = ed12c80
 	parent = upstream
 	previous = 03313c3
