--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_actionlib_msgs
 	base = 8a74e1e
-	trimbase = ac0775c
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
