--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_shape_msgs
-	base = 9ca3423
-	trimbase = 
+	base = 35bfb63
+	trimbase = 9ca3423
 	parent = upstream
 	previous = 03313c3
