--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_shape_msgs
 	base = 6292c9f
-	trimbase = 03acfbc
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
