--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_common_msgs
 	base = 220f4d2
-	trimbase = c5f7b38
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
