--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_common_msgs
-	base = 92b6215
-	trimbase = 
+	base = 9c19f82
+	trimbase = 92b6215
 	parent = upstream
 	previous = 03313c3
