--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_geometry_msgs
 	base = b5b3f3c
-	trimbase = d64edfe
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
