--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_geometry_msgs
-	base = e70bc22
-	trimbase = 
+	base = 89fc099
+	trimbase = e70bc22
 	parent = upstream
 	previous = 03313c3
