--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_std_srvs
 	base = 41e8577
-	trimbase = 5473d65
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
