--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_std_srvs
-	base = 7e85260
-	trimbase = 
+	base = 61fc007
+	trimbase = 7e85260
 	parent = upstream
 	previous = 03313c3
