--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_roscomm
-	base = 244ade1
-	trimbase = 
+	base = 7257358
+	trimbase = 244ade1
 	parent = upstream
 	previous = 03313c3
