--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_sensor_msgs
-	base = 4d7eb06
-	trimbase = 
+	base = 73af3e4
+	trimbase = 4d7eb06
 	parent = upstream
 	previous = 03313c3
