--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_rosparam
-	base = 9f485b5
-	trimbase = 
+	base = 1748d90
+	trimbase = 9f485b5
 	parent = upstream
 	previous = 03313c3
