--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_kdl_conversions
 	base = a15e5d5
-	trimbase = b8e2620
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
