--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_rosclock
-	base = efe6da2
-	trimbase = 
+	base = 5e25ca9
+	trimbase = efe6da2
 	parent = upstream
 	previous = 03313c3
