--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_stereo_msgs
 	base = 0042a90
-	trimbase = c3ab98a
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
