--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_dynamic_reconfigure
-	base = a394114
-	trimbase = 
+	base = e0d5283
+	trimbase = a394114
 	parent = upstream
 	previous = 03313c3
