--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_rosgraph_msgs
 	base = f37a001
-	trimbase = 6642cf0
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
