--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_trajectory_msgs
 	base = d4cb802
-	trimbase = a5ca3d8
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
