--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_trajectory_msgs
-	base = e267f9f
-	trimbase = 
+	base = e381d4f
+	trimbase = e267f9f
 	parent = upstream
 	previous = 03313c3
