--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_visualization_msgs
 	base = 7bf82ed
-	trimbase = 0e4e393
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
