--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_rosdeployment
-	base = e2a5022
-	trimbase = 
+	base = 9aaf184
+	trimbase = e2a5022
 	parent = upstream
 	previous = 03313c3
