--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_std_msgs
 	base = 741492e
-	trimbase = 78002dc
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
