--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_std_msgs
-	base = aa6cce1
-	trimbase = 
+	base = b306a1c
+	trimbase = aa6cce1
 	parent = upstream
 	previous = 03313c3
