--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_diagnostic_msgs
 	base = 7ea443e
-	trimbase = d80e5fc
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
