--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_diagnostic_msgs
-	base = 24bf98e
-	trimbase = 
+	base = b3f9c86
+	trimbase = 24bf98e
 	parent = upstream
 	previous = 03313c3
