--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_ros_comm
 	base = 4aa1fc6
-	trimbase = 04ae7c6
+	trimbase = 
 	parent = upstream
 	previous = bd3d382
