--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_ros_comm
-	base = a376e45
-	trimbase = 
+	base = 1cf5530
+	trimbase = a376e45
 	parent = upstream
 	previous = 03313c3
