--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_ros
-	base = 3b10ce3
-	trimbase = 
+	base = 49d01ca
+	trimbase = 3b10ce3
 	parent = upstream
 	previous = 03313c3
