--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_actionlib
-	base = 88ff75d
-	trimbase = 
+	base = b553b26
+	trimbase = 88ff75d
 	parent = upstream
 	previous = 03313c3
