--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_ros_integration
-	base = 1875cee
-	trimbase = 
+	base = bde66a2
+	trimbase = 1875cee
 	parent = upstream
 	previous = 03313c3
