--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_ros_msgs
-	base = 2698fbc
-	trimbase = 
+	base = 314e015
+	trimbase = 2698fbc
 	parent = upstream
 	previous = 03313c3
