Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.9.0-0": ["Tue May 02 2017", "Orocos Developers", "orocos-dev@lists.mech.kuleuven.be"]}
+{"2.9.1-0": ["Thu Nov 16 2017", "Orocos Developers", "orocos-dev@lists.mech.kuleuven.be"], "2.9.0-0": ["Tue May 02 2017", "Orocos Developers", "orocos-dev@lists.mech.kuleuven.be"]}
