--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_rospack
-	base = a95254c
-	trimbase = 
+	base = e0e38ce
+	trimbase = a95254c
 	parent = upstream
 	previous = 5067e68
