--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_nav_msgs
 	base = a01279c
-	trimbase = 87acbcd
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
