--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_nav_msgs
-	base = 3741244
-	trimbase = 
+	base = 7abf28e
+	trimbase = 3741244
 	parent = upstream
 	previous = 5067e68
