--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_rosnode
-	base = 4ccfecc
-	trimbase = 
+	base = 614309f
+	trimbase = 4ccfecc
 	parent = upstream
 	previous = 5067e68
