--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_tf
-	base = b9ad237
-	trimbase = 
+	base = d297b37
+	trimbase = b9ad237
 	parent = upstream
 	previous = 5067e68
