--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_actionlib_msgs
 	base = d847e69
-	trimbase = bf316fd
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
