--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_actionlib_msgs
-	base = 2fc420d
-	trimbase = 
+	base = 66bf580
+	trimbase = 2fc420d
 	parent = upstream
 	previous = 5067e68
