--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_shape_msgs
 	base = 35bfb63
-	trimbase = 9ca3423
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
