--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_shape_msgs
-	base = 480aa40
-	trimbase = 
+	base = fbf2170
+	trimbase = 480aa40
 	parent = upstream
 	previous = 5067e68
