--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_common_msgs
-	base = f537119
-	trimbase = 
+	base = f471265
+	trimbase = f537119
 	parent = upstream
 	previous = 5067e68
