--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_geometry_msgs
-	base = 90f55ce
-	trimbase = 
+	base = 8ad4a1e
+	trimbase = 90f55ce
 	parent = upstream
 	previous = 5067e68
