--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_std_srvs
-	base = c4be781
-	trimbase = 
+	base = 1e25fdb
+	trimbase = c4be781
 	parent = upstream
 	previous = 5067e68
