--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_roscomm
-	base = 4371177
-	trimbase = 
+	base = 25d3b06
+	trimbase = 4371177
 	parent = upstream
 	previous = 5067e68
