--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_sensor_msgs
-	base = 6f7e4b6
-	trimbase = 
+	base = 19a2826
+	trimbase = 6f7e4b6
 	parent = upstream
 	previous = 5067e68
