--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_rosparam
-	base = f050f5e
-	trimbase = 
+	base = 4c82b34
+	trimbase = f050f5e
 	parent = upstream
 	previous = 5067e68
