--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_kdl_conversions
 	base = 59c43e7
-	trimbase = 701e000
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
