--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_kdl_conversions
-	base = 8479305
-	trimbase = 
+	base = 6a3bf3c
+	trimbase = 8479305
 	parent = upstream
 	previous = 5067e68
