--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_rosclock
-	base = 74a734d
-	trimbase = 
+	base = 159741c
+	trimbase = 74a734d
 	parent = upstream
 	previous = 5067e68
