--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_stereo_msgs
 	base = 9bd1e78
-	trimbase = 41e9e3a
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
