--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_stereo_msgs
-	base = d8dc35c
-	trimbase = 
+	base = 204a299
+	trimbase = d8dc35c
 	parent = upstream
 	previous = 5067e68
