--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_dynamic_reconfigure
 	base = e0d5283
-	trimbase = a394114
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
