--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_dynamic_reconfigure
-	base = 0d71ec1
-	trimbase = 
+	base = c1e1c7a
+	trimbase = 0d71ec1
 	parent = upstream
 	previous = 5067e68
