--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_rosgraph_msgs
 	base = 7fab85e
-	trimbase = 5994ecf
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
