--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_rosgraph_msgs
-	base = 87000a6
-	trimbase = 
+	base = 1db9f45
+	trimbase = 87000a6
 	parent = upstream
 	previous = 5067e68
