--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_trajectory_msgs
-	base = 32a27ee
-	trimbase = 
+	base = 1205914
+	trimbase = 32a27ee
 	parent = upstream
 	previous = 5067e68
