--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_trajectory_msgs
 	base = e381d4f
-	trimbase = e267f9f
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
