--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_visualization_msgs
 	base = 0b94fb7
-	trimbase = bd79f30
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
