--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_visualization_msgs
-	base = 978c7b9
-	trimbase = 
+	base = f202d39
+	trimbase = 978c7b9
 	parent = upstream
 	previous = 5067e68
