--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_rosdeployment
-	base = ac74a0b
-	trimbase = 
+	base = 492d273
+	trimbase = ac74a0b
 	parent = upstream
 	previous = 5067e68
