--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_std_msgs
 	base = b306a1c
-	trimbase = aa6cce1
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
