--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_std_msgs
-	base = ca9334c
-	trimbase = 
+	base = 35c2802
+	trimbase = ca9334c
 	parent = upstream
 	previous = 5067e68
