--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_diagnostic_msgs
-	base = 14f1f4d
-	trimbase = 
+	base = a2cc99a
+	trimbase = 14f1f4d
 	parent = upstream
 	previous = 5067e68
