--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_ros_comm
 	base = 1cf5530
-	trimbase = a376e45
+	trimbase = 
 	parent = upstream
 	previous = 03313c3
