--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_ros_comm
-	base = 2d1b025
-	trimbase = 
+	base = 7574156
+	trimbase = 2d1b025
 	parent = upstream
 	previous = 5067e68
