--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_ros
-	base = 3790229
-	trimbase = 
+	base = 020044a
+	trimbase = 3790229
 	parent = upstream
 	previous = 5067e68
