--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_actionlib
-	base = a0065c1
-	trimbase = 
+	base = 7b49cd1
+	trimbase = a0065c1
 	parent = upstream
 	previous = 5067e68
