--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_ros_integration
-	base = 8065523
-	trimbase = 
+	base = 3bbbbcb
+	trimbase = 8065523
 	parent = upstream
 	previous = 5067e68
