--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rtt_ros_msgs
-	base = db0a657
-	trimbase = 
+	base = 3e93e10
+	trimbase = db0a657
 	parent = upstream
 	previous = 5067e68
