--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4955ff4
-	trimbase = 
+	trim = rtt_rospack
+	base = ea046fa
+	trimbase = 4955ff4
 	parent = upstream
 	previous = bd5012a
