--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f19ecb2
-	trimbase = 
+	trim = typekits/rtt_nav_msgs
+	base = 1eb390d
+	trimbase = f19ecb2
 	parent = upstream
 	previous = bd5012a
