--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c9e1ff9
-	trimbase = 
+	trim = rtt_rosnode
+	base = b544445
+	trimbase = c9e1ff9
 	parent = upstream
 	previous = bd5012a
