--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fb71add
-	trimbase = 
+	trim = rtt_tf
+	base = d58f3a1
+	trimbase = fb71add
 	parent = upstream
 	previous = bd5012a
