--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 249ec79
-	trimbase = 
+	trim = typekits/rtt_actionlib_msgs
+	base = da34b75
+	trimbase = 249ec79
 	parent = upstream
 	previous = bd5012a
