--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 870965b
-	trimbase = 
+	trim = typekits/rtt_shape_msgs
+	base = bbb09c5
+	trimbase = 870965b
 	parent = upstream
 	previous = bd5012a
