--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3313d12
-	trimbase = 
+	trim = typekits/rtt_common_msgs
+	base = b7c42b4
+	trimbase = 3313d12
 	parent = upstream
 	previous = bd5012a
