--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 1c6feda
-	trimbase = 
+	trim = typekits/rtt_geometry_msgs
+	base = 72f0e7c
+	trimbase = 1c6feda
 	parent = upstream
 	previous = bd5012a
