--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 46e2dab
-	trimbase = 
+	trim = typekits/rtt_std_srvs
+	base = 153cc1d
+	trimbase = 46e2dab
 	parent = upstream
 	previous = bd5012a
