--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6da62bc
-	trimbase = 
+	trim = rtt_roscomm
+	base = 3dbc1d3
+	trimbase = 6da62bc
 	parent = upstream
 	previous = bd5012a
