--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e8fdee2
-	trimbase = 
+	trim = typekits/rtt_sensor_msgs
+	base = 1c5b19b
+	trimbase = e8fdee2
 	parent = upstream
 	previous = bd5012a
