--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 893a80f
-	trimbase = 
+	trim = rtt_rosparam
+	base = df097b4
+	trimbase = 893a80f
 	parent = upstream
 	previous = bd5012a
