--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a64b6dc
-	trimbase = 
+	trim = typekits/rtt_kdl_conversions
+	base = b88ae4d
+	trimbase = a64b6dc
 	parent = upstream
 	previous = bd5012a
