--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b5f9838
-	trimbase = 
+	trim = rtt_rosclock
+	base = fe64835
+	trimbase = b5f9838
 	parent = upstream
 	previous = bd5012a
