--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ffa2ade
-	trimbase = 
+	trim = typekits/rtt_stereo_msgs
+	base = 483418e
+	trimbase = ffa2ade
 	parent = upstream
 	previous = bd5012a
