--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ab1c3e9
-	trimbase = 
+	trim = rtt_dynamic_reconfigure
+	base = 05d7b68
+	trimbase = ab1c3e9
 	parent = upstream
 	previous = bd5012a
