--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 51d4f4a
-	trimbase = 
+	trim = typekits/rtt_rosgraph_msgs
+	base = 362f570
+	trimbase = 51d4f4a
 	parent = upstream
 	previous = bd5012a
