--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d95b1d5
-	trimbase = 
+	trim = typekits/rtt_trajectory_msgs
+	base = d8f24e7
+	trimbase = d95b1d5
 	parent = upstream
 	previous = bd5012a
