--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2e3224f
-	trimbase = 
+	trim = typekits/rtt_visualization_msgs
+	base = ef286e5
+	trimbase = 2e3224f
 	parent = upstream
 	previous = bd5012a
