--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a82a894
-	trimbase = 
+	trim = rtt_rosdeployment
+	base = 76e2b3a
+	trimbase = a82a894
 	parent = upstream
 	previous = bd5012a
