--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 05a1785
-	trimbase = 
+	trim = typekits/rtt_std_msgs
+	base = d7a9b6d
+	trimbase = 05a1785
 	parent = upstream
 	previous = bd5012a
