--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0058f0f
-	trimbase = 
+	trim = typekits/rtt_diagnostic_msgs
+	base = 75c643b
+	trimbase = 0058f0f
 	parent = upstream
 	previous = bd5012a
