--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4844510
-	trimbase = 
+	trim = typekits/rtt_ros_comm
+	base = 2f0d934
+	trimbase = 4844510
 	parent = upstream
 	previous = bd5012a
