--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8bd8b90
-	trimbase = 
+	trim = rtt_ros
+	base = 36ebbce
+	trimbase = 8bd8b90
 	parent = upstream
 	previous = bd5012a
