--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 848f254
-	trimbase = 
+	trim = rtt_actionlib
+	base = a7e5c30
+	trimbase = 848f254
 	parent = upstream
 	previous = bd5012a
