--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a670fb7
-	trimbase = 
+	trim = rtt_ros_integration
+	base = a6621b9
+	trimbase = a670fb7
 	parent = upstream
 	previous = bd5012a
