--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2835f13
-	trimbase = 
+	trim = rtt_ros_msgs
+	base = c8664b7
+	trimbase = 2835f13
 	parent = upstream
 	previous = bd5012a
