--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ea046fa
+	base = ebb757e
 	trimbase = 
 	parent = release/lunar/rtt_rospack
-	previous = 
+	previous = ea046fa
