--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3d13565
+	base = 087a9ed
 	trimbase = 
 	parent = debian/lunar/rtt_rospack
-	previous = 
+	previous = 3d13565
