--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c8664b7
+	base = 89a5c18
 	trimbase = 
 	parent = release/lunar/rtt_ros_msgs
-	previous = 
+	previous = c8664b7
