--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c417ef0
+	base = 1cc65cb
 	trimbase = 
 	parent = debian/lunar/rtt_ros_msgs
-	previous = 
+	previous = c417ef0
