--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d8f24e7
+	base = 48359b5
 	trimbase = 
 	parent = release/lunar/rtt_trajectory_msgs
-	previous = 
+	previous = d8f24e7
