--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2b37e4a
+	base = e47391a
 	trimbase = 
 	parent = debian/lunar/rtt_trajectory_msgs
-	previous = 
+	previous = 2b37e4a
