--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 36ebbce
+	base = 2725744
 	trimbase = 
 	parent = release/lunar/rtt_ros
-	previous = 
+	previous = 36ebbce
