--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cd8a224
+	base = fe244df
 	trimbase = 
 	parent = debian/lunar/rtt_ros
-	previous = 
+	previous = cd8a224
