--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 483418e
+	base = 40026ab
 	trimbase = 
 	parent = release/lunar/rtt_stereo_msgs
-	previous = 
+	previous = 483418e
