--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0c774bd
+	base = 7a97a99
 	trimbase = 
 	parent = debian/lunar/rtt_stereo_msgs
-	previous = 
+	previous = 0c774bd
