--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1eb390d
+	base = 41497ee
 	trimbase = 
 	parent = release/lunar/rtt_nav_msgs
-	previous = 
+	previous = 1eb390d
