--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e2aa8d0
+	base = 3feacd7
 	trimbase = 
 	parent = debian/lunar/rtt_nav_msgs
-	previous = 
+	previous = e2aa8d0
