--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7e5c30
+	base = 8b6dfa7
 	trimbase = 
 	parent = release/lunar/rtt_actionlib
-	previous = 
+	previous = a7e5c30
