--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e375868
+	base = cff6b61
 	trimbase = 
 	parent = debian/lunar/rtt_actionlib
-	previous = 
+	previous = e375868
