--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1c5b19b
+	base = 88f9f99
 	trimbase = 
 	parent = release/lunar/rtt_sensor_msgs
-	previous = 
+	previous = 1c5b19b
