--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 59e0842
+	base = da83b83
 	trimbase = 
 	parent = debian/lunar/rtt_sensor_msgs
-	previous = 
+	previous = 59e0842
