--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d7a9b6d
+	base = 6be41a5
 	trimbase = 
 	parent = release/lunar/rtt_std_msgs
-	previous = 
+	previous = d7a9b6d
