--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c85a949
+	base = 9bb02e7
 	trimbase = 
 	parent = debian/lunar/rtt_std_msgs
-	previous = 
+	previous = c85a949
