--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = da34b75
+	base = 740bb59
 	trimbase = 
 	parent = release/lunar/rtt_actionlib_msgs
-	previous = 
+	previous = da34b75
