--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e8327f6
+	base = 880f343
 	trimbase = 
 	parent = debian/lunar/rtt_actionlib_msgs
-	previous = 
+	previous = e8327f6
