--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b544445
+	base = 75457dc
 	trimbase = 
 	parent = release/lunar/rtt_rosnode
-	previous = 
+	previous = b544445
