--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8d34508
+	base = f5d343b
 	trimbase = 
 	parent = debian/lunar/rtt_rosnode
-	previous = 
+	previous = 8d34508
