--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 72f0e7c
+	base = 95acaf7
 	trimbase = 
 	parent = release/lunar/rtt_geometry_msgs
-	previous = 
+	previous = 72f0e7c
