--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cb52a16
+	base = c404def
 	trimbase = 
 	parent = debian/lunar/rtt_geometry_msgs
-	previous = 
+	previous = cb52a16
