--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b7c42b4
+	base = 4f3a348
 	trimbase = 
 	parent = release/lunar/rtt_common_msgs
-	previous = 
+	previous = b7c42b4
