--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2476799
+	base = d9f20b2
 	trimbase = 
 	parent = debian/lunar/rtt_common_msgs
-	previous = 
+	previous = 2476799
