--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 75c643b
+	base = ca7a0b4
 	trimbase = 
 	parent = release/lunar/rtt_diagnostic_msgs
-	previous = 
+	previous = 75c643b
