--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c46bb2b
+	base = 9d8183d
 	trimbase = 
 	parent = debian/lunar/rtt_diagnostic_msgs
-	previous = 
+	previous = c46bb2b
