--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 496f727
+	base = 2daadb3
 	trimbase = 
 	parent = debian/lunar/rtt_std_srvs
-	previous = 
+	previous = 496f727
