--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 76e2b3a
+	base = 4a6ee92
 	trimbase = 
 	parent = release/lunar/rtt_rosdeployment
-	previous = 
+	previous = 76e2b3a
