--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 70954b0
+	base = 53772d2
 	trimbase = 
 	parent = debian/lunar/rtt_rosdeployment
-	previous = 
+	previous = 70954b0
