--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 362f570
+	base = ba2568f
 	trimbase = 
 	parent = release/lunar/rtt_rosgraph_msgs
-	previous = 
+	previous = 362f570
