--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5e8e435
+	base = 4c5c6d5
 	trimbase = 
 	parent = debian/lunar/rtt_rosgraph_msgs
-	previous = 
+	previous = 5e8e435
