--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ff85c58
+	base = 3ff4588
 	trimbase = 
 	parent = debian/lunar/rtt_rosclock
-	previous = 
+	previous = ff85c58
