--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3dbc1d3
+	base = 7b8a745
 	trimbase = 
 	parent = release/lunar/rtt_roscomm
-	previous = 
+	previous = 3dbc1d3
