--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8856a39
+	base = 39e7d5a
 	trimbase = 
 	parent = debian/lunar/rtt_roscomm
-	previous = 
+	previous = 8856a39
