--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bbb09c5
+	base = 7e5d481
 	trimbase = 
 	parent = release/lunar/rtt_shape_msgs
-	previous = 
+	previous = bbb09c5
