--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 553c6d6
+	base = 53a8565
 	trimbase = 
 	parent = debian/lunar/rtt_shape_msgs
-	previous = 
+	previous = 553c6d6
