--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 05d7b68
+	base = 166396e
 	trimbase = 
 	parent = release/lunar/rtt_dynamic_reconfigure
-	previous = 
+	previous = 05d7b68
