--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 55c4b83
+	base = d292437
 	trimbase = 
 	parent = debian/lunar/rtt_dynamic_reconfigure
-	previous = 
+	previous = 55c4b83
