--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ef286e5
+	base = 5762cc5
 	trimbase = 
 	parent = release/lunar/rtt_visualization_msgs
-	previous = 
+	previous = ef286e5
