--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4f3927e
+	base = 8e7315b
 	trimbase = 
 	parent = debian/lunar/rtt_visualization_msgs
-	previous = 
+	previous = 4f3927e
