--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2f0d934
+	base = 0ead2b7
 	trimbase = 
 	parent = release/lunar/rtt_ros_comm
-	previous = 
+	previous = 2f0d934
