--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 83aa919
+	base = 5b2bba7
 	trimbase = 
 	parent = debian/lunar/rtt_ros_comm
-	previous = 
+	previous = 83aa919
