--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a6621b9
+	base = 685890b
 	trimbase = 
 	parent = release/lunar/rtt_ros_integration
-	previous = 
+	previous = a6621b9
