--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fbdd662
+	base = aa11df9
 	trimbase = 
 	parent = debian/lunar/rtt_ros_integration
-	previous = 
+	previous = fbdd662
