--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b88ae4d
+	base = c5580a7
 	trimbase = 
 	parent = release/lunar/rtt_kdl_conversions
-	previous = 
+	previous = b88ae4d
