--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 96782f0
+	base = fbbae0d
 	trimbase = 
 	parent = debian/lunar/rtt_kdl_conversions
-	previous = 
+	previous = 96782f0
