--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = df097b4
+	base = 1042da7
 	trimbase = 
 	parent = release/lunar/rtt_rosparam
-	previous = 
+	previous = df097b4
