--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ee4ddf6
+	base = 0e948d3
 	trimbase = 
 	parent = debian/lunar/rtt_rosparam
-	previous = 
+	previous = ee4ddf6
