--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d58f3a1
+	base = 766a9b4
 	trimbase = 
 	parent = release/lunar/rtt_tf
-	previous = 
+	previous = d58f3a1
