--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a985b93
+	base = 5a609df
 	trimbase = 
 	parent = debian/lunar/rtt_rospack
-	previous = 
+	previous = a985b93
