--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c065e9a
+	base = e4d4fda
 	trimbase = 
 	parent = debian/lunar/rtt_ros_msgs
-	previous = 
+	previous = c065e9a
