--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d9f8651
+	base = 4899981
 	trimbase = 
 	parent = debian/lunar/rtt_trajectory_msgs
-	previous = 
+	previous = d9f8651
