--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d249f65
+	base = 6acfd2b
 	trimbase = 
 	parent = debian/lunar/rtt_ros
-	previous = 
+	previous = d249f65
