--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5f846cf
+	base = b5d7d60
 	trimbase = 
 	parent = debian/lunar/rtt_stereo_msgs
-	previous = 
+	previous = 5f846cf
