--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 98e7a89
+	base = d736aaa
 	trimbase = 
 	parent = debian/lunar/rtt_nav_msgs
-	previous = 
+	previous = 98e7a89
