--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c023a51
+	base = 2529e45
 	trimbase = 
 	parent = debian/lunar/rtt_actionlib
-	previous = 
+	previous = c023a51
