--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0622c2e
+	base = 842ccc2
 	trimbase = 
 	parent = debian/lunar/rtt_sensor_msgs
-	previous = 
+	previous = 0622c2e
