--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dec4f9f
+	base = 9ee236b
 	trimbase = 
 	parent = debian/lunar/rtt_std_msgs
-	previous = 
+	previous = dec4f9f
