--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e3ea13f
+	base = a766151
 	trimbase = 
 	parent = debian/lunar/rtt_actionlib_msgs
-	previous = 
+	previous = e3ea13f
