--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1e9d95c
+	base = d643474
 	trimbase = 
 	parent = debian/lunar/rtt_rosnode
-	previous = 
+	previous = 1e9d95c
