--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8815ac5
+	base = e3b0cb8
 	trimbase = 
 	parent = debian/lunar/rtt_geometry_msgs
-	previous = 
+	previous = 8815ac5
