--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = daf03a6
+	base = 4fbbecd
 	trimbase = 
 	parent = debian/lunar/rtt_common_msgs
-	previous = 
+	previous = daf03a6
