--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c48466d
+	base = 18a7799
 	trimbase = 
 	parent = debian/lunar/rtt_diagnostic_msgs
-	previous = 
+	previous = c48466d
