--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0436907
+	base = 4e6a262
 	trimbase = 
 	parent = debian/lunar/rtt_std_srvs
-	previous = 
+	previous = 0436907
