--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 98c5b10
+	base = 1b54dee
 	trimbase = 
 	parent = debian/lunar/rtt_rosdeployment
-	previous = 
+	previous = 98c5b10
