--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7091d0c
+	base = 820ebe3
 	trimbase = 
 	parent = debian/lunar/rtt_rosgraph_msgs
-	previous = 
+	previous = 7091d0c
