--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 759d1df
+	base = b386e1e
 	trimbase = 
 	parent = debian/lunar/rtt_rosclock
-	previous = 
+	previous = 759d1df
