--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 66e5635
+	base = 23a3994
 	trimbase = 
 	parent = debian/lunar/rtt_roscomm
-	previous = 
+	previous = 66e5635
