--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 500f730
+	base = 9fe3073
 	trimbase = 
 	parent = debian/lunar/rtt_shape_msgs
-	previous = 
+	previous = 500f730
