--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4d1e779
+	base = 52e7a0e
 	trimbase = 
 	parent = debian/lunar/rtt_dynamic_reconfigure
-	previous = 
+	previous = 4d1e779
