--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e053439
+	base = b447ca7
 	trimbase = 
 	parent = debian/lunar/rtt_visualization_msgs
-	previous = 
+	previous = e053439
