--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ef76c84
+	base = 8fec95d
 	trimbase = 
 	parent = debian/lunar/rtt_ros_comm
-	previous = 
+	previous = ef76c84
