--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f10ed7b
+	base = 17d7cf3
 	trimbase = 
 	parent = debian/lunar/rtt_ros_integration
-	previous = 
+	previous = f10ed7b
