--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5f829ea
+	base = fc38674
 	trimbase = 
 	parent = debian/lunar/rtt_kdl_conversions
-	previous = 
+	previous = 5f829ea
