--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bbfa7ec
+	base = 978b4ae
 	trimbase = 
 	parent = debian/lunar/rtt_rosparam
-	previous = 
+	previous = bbfa7ec
