--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 81348df
+	base = e4afad5
 	trimbase = 
 	parent = debian/lunar/rtt_tf
-	previous = 
+	previous = 81348df
