--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a1ca3926
-	trimbase = 
+	trim = rtt_rospack
+	base = 6dad5ca9
+	trimbase = a1ca3926
 	parent = upstream
 	previous = c8a69cc4
