--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6af4748e
-	trimbase = 
+	trim = typekits/rtt_nav_msgs
+	base = db9bec8a
+	trimbase = 6af4748e
 	parent = upstream
 	previous = c8a69cc4
