--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8107698d
-	trimbase = 
+	trim = rtt_rosnode
+	base = 4be0169c
+	trimbase = 8107698d
 	parent = upstream
 	previous = c8a69cc4
