--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 97e3abd7
-	trimbase = 
+	trim = rtt_tf
+	base = 4523b9c8
+	trimbase = 97e3abd7
 	parent = upstream
 	previous = c8a69cc4
