--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 885636d8
-	trimbase = 
+	trim = typekits/rtt_actionlib_msgs
+	base = 196f8df4
+	trimbase = 885636d8
 	parent = upstream
 	previous = c8a69cc4
