--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b5135e09
-	trimbase = 
+	trim = typekits/rtt_shape_msgs
+	base = 56031476
+	trimbase = b5135e09
 	parent = upstream
 	previous = c8a69cc4
