--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fee9bb14
-	trimbase = 
+	trim = typekits/rtt_common_msgs
+	base = 934066bf
+	trimbase = fee9bb14
 	parent = upstream
 	previous = c8a69cc4
