--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0ba2fad5
-	trimbase = 
+	trim = typekits/rtt_geometry_msgs
+	base = 19cefa82
+	trimbase = 0ba2fad5
 	parent = upstream
 	previous = c8a69cc4
