--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9a395986
-	trimbase = 
+	trim = typekits/rtt_std_srvs
+	base = 95ea5c9f
+	trimbase = 9a395986
 	parent = upstream
 	previous = c8a69cc4
