--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4ef412ef
-	trimbase = 
+	trim = rtt_roscomm
+	base = f2cca5be
+	trimbase = 4ef412ef
 	parent = upstream
 	previous = c8a69cc4
