--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cd68afb5
-	trimbase = 
+	trim = typekits/rtt_tf2_msgs
+	base = 7e74380e
+	trimbase = cd68afb5
 	parent = upstream
 	previous = c8a69cc4
