--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a8a75b35
-	trimbase = 
+	trim = typekits/rtt_sensor_msgs
+	base = 37402846
+	trimbase = a8a75b35
 	parent = upstream
 	previous = c8a69cc4
