--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 257f66b4
-	trimbase = 
+	trim = rtt_rosparam
+	base = 13826d4f
+	trimbase = 257f66b4
 	parent = upstream
 	previous = c8a69cc4
