--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 63d9352e
-	trimbase = 
+	trim = typekits/rtt_kdl_conversions
+	base = f1c0f16d
+	trimbase = 63d9352e
 	parent = upstream
 	previous = c8a69cc4
