--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 677037c9
-	trimbase = 
+	trim = rtt_rosclock
+	base = d17274bb
+	trimbase = 677037c9
 	parent = upstream
 	previous = c8a69cc4
