--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4a2430b9
-	trimbase = 
+	trim = typekits/rtt_stereo_msgs
+	base = f1ef092f
+	trimbase = 4a2430b9
 	parent = upstream
 	previous = c8a69cc4
