--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 19f9314e
-	trimbase = 
+	trim = rtt_dynamic_reconfigure
+	base = 6094c049
+	trimbase = 19f9314e
 	parent = upstream
 	previous = c8a69cc4
