--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = bba4a2ff
-	trimbase = 
+	trim = typekits/rtt_rosgraph_msgs
+	base = f09abb51
+	trimbase = bba4a2ff
 	parent = upstream
 	previous = c8a69cc4
