--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 925ee3d0
-	trimbase = 
+	trim = typekits/rtt_trajectory_msgs
+	base = f5659ed2
+	trimbase = 925ee3d0
 	parent = upstream
 	previous = c8a69cc4
