--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 594ea68b
-	trimbase = 
+	trim = typekits/rtt_visualization_msgs
+	base = 090700e8
+	trimbase = 594ea68b
 	parent = upstream
 	previous = c8a69cc4
