--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7d990c13
-	trimbase = 
+	trim = rtt_rosdeployment
+	base = 0dbae159
+	trimbase = 7d990c13
 	parent = upstream
 	previous = c8a69cc4
