--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a6177bdc
-	trimbase = 
+	trim = typekits/rtt_std_msgs
+	base = b25388ef
+	trimbase = a6177bdc
 	parent = upstream
 	previous = c8a69cc4
