--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5ea60f6a
-	trimbase = 
+	trim = typekits/rtt_diagnostic_msgs
+	base = efc29957
+	trimbase = 5ea60f6a
 	parent = upstream
 	previous = c8a69cc4
