--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 763dfdf2
-	trimbase = 
+	trim = typekits/rtt_ros_comm
+	base = 0003c781
+	trimbase = 763dfdf2
 	parent = upstream
 	previous = c8a69cc4
