--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7e1d9e9b
-	trimbase = 
+	trim = rtt_ros
+	base = f01f12fe
+	trimbase = 7e1d9e9b
 	parent = upstream
 	previous = c8a69cc4
