--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ab58d508
-	trimbase = 
+	trim = rtt_actionlib
+	base = 16613ee8
+	trimbase = ab58d508
 	parent = upstream
 	previous = c8a69cc4
