--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 34347802
-	trimbase = 
+	trim = rtt_ros_integration
+	base = d97f0cb5
+	trimbase = 34347802
 	parent = upstream
 	previous = c8a69cc4
