--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d5656722
-	trimbase = 
+	trim = rtt_ros_msgs
+	base = d8723a56
+	trimbase = d5656722
 	parent = upstream
 	previous = c8a69cc4
