--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 80061c55
+	base = b81e02ba
 	trimbase = 
 	parent = debian/noetic/rtt_ros_msgs
-	previous = 
+	previous = 80061c55
