--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7c36376a
+	base = 5c26a764
 	trimbase = 
 	parent = debian/noetic/rtt_dynamic_reconfigure
-	previous = 
+	previous = 7c36376a
