--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 78c33903
+	base = 61a32d6e
 	trimbase = 
 	parent = debian/noetic/rtt_tf2_msgs
-	previous = 
+	previous = 78c33903
