--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0003c781
+	base = 909ee20c
 	trimbase = 
 	parent = release/noetic/rtt_ros_comm
-	previous = 
+	previous = 0003c781
