--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a416111c
+	base = 472afa89
 	trimbase = 
 	parent = debian/noetic/rtt_ros_comm
-	previous = 
+	previous = a416111c
