--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 196f8df4
+	base = eb754d3d
 	trimbase = 
 	parent = release/noetic/rtt_actionlib_msgs
-	previous = 
+	previous = 196f8df4
