--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ccbe9f18
+	base = e19f4d67
 	trimbase = 
 	parent = debian/noetic/rtt_actionlib_msgs
-	previous = 
+	previous = ccbe9f18
