--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3f32e620
+	base = 53a65cde
 	trimbase = 
 	parent = debian/noetic/rtt_common_msgs
-	previous = 
+	previous = 3f32e620
