--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 04de128a
+	base = fb0d1b29
 	trimbase = 
 	parent = debian/noetic/rtt_tf
-	previous = 
+	previous = 04de128a
