--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 43381b5e
+	base = e6f64bf3
 	trimbase = 
 	parent = debian/noetic/rtt_ros
-	previous = 
+	previous = 43381b5e
