--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 090700e8
+	base = 6c78e591
 	trimbase = 
 	parent = release/noetic/rtt_visualization_msgs
-	previous = 
+	previous = 090700e8
